Added files via upload

--- a/show.html
+++ b/show.html
@@ -43,28 +43,28 @@
 			<div id="image-container">
 				<div class="img" id="img-1">
 					<div class="mask"></div>
-					<img src="images/c1.jpg">
+					<img src="img/c1.jpg">
 				</div>	
 				<div class="img" id="img-2">
 					<div class="mask"></div>
-					<img src="images/c2.jpg">
+					<img src="img/c2.jpg">
 				</div>	
 				<div class="img" id="img-3">
 					<div class="mask" id="mask-1"></div>
 					<div class="mask" id="mask-2"></div>
-					<img src="images/c3.jpg">
+					<img src="img/c3.jpg">
 				</div>	
 				<div class="img" id="img-4">
 					<div class="mask"></div>
-					<img src="images/c4.jpg">
+					<img src="img/c4.jpg">
 				</div>	
 				<div class="img" id="img-5">
 					<div class="mask"></div>
-					<img src="images/c5.jpg">
+					<img src="img/c5.jpg">
 				</div>	
 				<div class="img" id="img-6">
 					<div class="mask"></div>
-					<img src="images/c6.jpg">
+					<img src="img/c6.jpg">
 				</div>	
 				<div class="clearfix"></div>
 			</div>
