--- a/index.html
+++ b/index.html
@@ -19,16 +19,21 @@
   </head>
   <body>
     <section class="page-header">
-      <h2 class="project-name">富凯园林工程有限公司</h2>
-	  
+      <h3 class="project-name">富凯园林工程有限公司</h3>
+	   
     </section>
-   
+	 <div  background:"#FF0000">
+		<a color="#ff0000"href="index.html">首页</a>
+		<a href="show.html">作品展示</a>
+       <a href="art.html">雕刻藝術</a>
+	   <a href="about.html">关于我们</a>
+	 </div>
 	 <script src="js/jquery-1.8.3.min.js"></script>
     <!--Luara js文件-->
     <script src="js/jquery.luara.0.0.1.min.js"></script>
 
     <!--Luara图片切换骨架begin-->
-    <div class="example2">
+    <div class="example2",>
         <ul>
             <li><img src="img/1.jpg" alt="1"/></li>
             <li><img src="img/2.jpg" alt="2"/></li>
@@ -46,16 +51,16 @@
     <script>
         $(function(){
             <!--调用Luara示例-->
-            $(".example2").luara({width:"1366",height:"600",interval:4500,selected:"seleted",deriction:"left"});
+            $(".example2").luara({width:"1000",height:"600",interval:4500,selected:"seleted"});
 
         });
     </script>
-	<section class="main-content">
-		<h3>河北富凯园林工程有限公司于2015年1月26日在石家庄工商局登记注册，业务经理是韩书增，公司注册资本未知，我公司的办公地址位于距首都最近的省会城市，河北省省会石家庄，河北省石家庄市新华区西三庄北大街9号，我们有最好的产品和专业的销售和技术团队，在公司发展壮大的1年里，我们为客户提供最好的产品、良好的技术支持、健全的售后服务，河北富凯园林工程有限公司是石家庄园林工具行业知名企业，如果您对我公司的产品服务有兴趣，请在线留言或者来电咨询。 </h3>
+	
+
+
+   <section >
+		<h4> 河北省富凯园林工程有限公司 曲阳是中国雕刻之乡，曲阳城南山石质纯净、坚韧润滑、品位绝奇，其多彩的资源给其艺匠施展技艺创造了得天独厚的优越条件。曲阳石雕既不失魏代神秘朦胧的粗框气魄，又承启唐宋自然丰满庄重优美的造型，菩萨观音、力士天女、龙凤狮兽为其艺术典型。当代中国工艺美术大师卢进桥用牙、木雕精巧易透的手法丰富了石雕造型技艺，开创了小件精品的制作，拓展了石雕创意的广阔天地，使曲阳石雕成为现代民间石雕的重要代表。据了解，曲阳县大大小小的石雕厂有2300多家，产品远销100多个国家和地区，年创产值数亿元。关于石雕艺术的起源，曲阳当地有个很盛行的传说：春秋战国时期，与鬼谷子齐名的黄石公隐居黄山，把《雕刻天书》传给了两位曲阳弟子，从此曲阳人便学会了雕刻。...<a href="about.html">更多</a></h4>
 		
 	</section>
-
-
-  
   </body>
 </html>
