--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
             <img src="images/tm-sigma-01.jpg" alt="Image 1" class="img-fluid sigmapad col-lg-4 col-md-6 col-sm-6"></a>
 
 			<a href="images/tm-sigma-02.jpg" data-toggle="lightbox" data-gallery="sigma-gallery" data-title="铜人（一家三口）"
-            	data-footer="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non nunc dictum.">
+            	data-footer="">
             <img src="images/tm-sigma-02.jpg" alt="Image 2" class="img-fluid sigmapad col-lg-4 col-md-6 col-sm-6"></a>
 
 			<a href="images/tm-sigma-03.jpg" data-toggle="lightbox" data-gallery="sigma-gallery" data-title="栏板、石柱、浮雕">
 			<img src="images/tm-sigma-03.jpg" alt="Image 3" class="img-fluid sigmapad col-lg-4 col-md-8 col-sm-12"></a>
 
 			<a href="images/tm-sigma-04.jpg" data-toggle="lightbox" data-gallery="sigma-gallery" data-title="八仙过海、各显神通"
-            	data-footer="Aenean et tortor nec odio tempor volutpat nec in dui. Etiam libero turpis, accumsan nec.">
+            	data-footer=""><!-- data_footer 用于显示详细信息，先不写 -->
 			<img src="images/tm-sigma-04.jpg" alt="Image 4" class="img-fluid sigmapad col-lg-8 col-md-4 col-sm-6"></a>
 
 			<a href="images/tm-sigma-05.jpg" data-toggle="lightbox" data-gallery="sigma-gallery" data-title="解放军">
