--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <p>
 				    邮箱:fukaiyuanlin@sina.com</br>
 					有需要我们的可以随时联系我们！！！</br>
-					发送邮件时请注明需策划书。
+					发送邮件时请注明，需策划书。
 				 </p>
             </div>
         </div> 
