Added files via upload

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <!--    <link rel="stylesheet" type="text/css" href="css/ekko-lightbox-dark.css"> -->
     <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/top.js"></script> 
     <title>富凯园林工程有限公司</title>
 </head>
 
@@ -262,10 +264,6 @@
         	<div class="sigma-copyright col-lg-8">
             	<p >本网站只用于宣传。内容真实可靠！！！</p>
             </div>
-            
-            <div class="sigma-copyright col-lg-4 single-page-nav text-right">
-            	<p><a href="#top">回到顶部</a></p>
-            </div>
         </div>
         
     </div>   
@@ -309,4 +307,5 @@
         </script>
 
 </body>
+ <a href="#top" class="cd-top">Top</a>
 </html>
