--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
         <div class="row">
         	<div class="sigma-content col-lg-3 col-md-6 sigma-bg-lightgray text-center">   	 
                 <h2>产品</h2>
-            	<p >我们公司主要发展大型广场、公园，喷泉、音乐喷泉，各种雕塑、铜雕，栏板等项目。</br>我们致力于做好每一个工程，美化城市。让我们的生活更加的丰富多彩~</p>
+            	<p >我们公司主要发展大型广场、公园，喷泉、音乐喷泉，各种雕塑、铜雕，栏板等项目。</br>我们致力于做好每一个工程，美化城市。让我们的生活更加的丰富多彩~</br></br></br></p>
 				
             </div>
             <div class="sigma-content col-lg-3 col-md-6 sigma-bg-gray text-center">
             	<h2>发展</h2>
             	<p>我们的园林项目发展到了包括天津，西安，石家庄，内蒙古等各大城市。</br>
-				 我们公司刚刚起步，但是我们的项目已经发展到了以上各大城市。可见我们的雄心壮志
+				 我们公司刚刚起步，但是我们的项目已经发展到了以上各大城市。可见我们的雄心壮志</br></br></br>
 				</p>
             </div>
             <div class="sigma-content col-lg-3 col-md-6 sigma-bg-darkgray text-center">
             	<h2>规划</h2>
             	<p>随着时代不断的进步，城市的规划，园林行业也有了很大的发展，这让我们的生活环境得到了很大的改善。</br>
-					我们致力于将公司发展到每个城市都有我们的项目。为每个城市都出一份力~
+					我们致力于将公司发展到每个城市都有我们的项目。为每个城市都出一份力~</br></br></br>
 				</p>
             </div>
             <div class="sigma-content col-lg-3 col-md-6 sigma-bg-black text-center">
