--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             <div class="sigma-content col-lg-3 col-md-6 sigma-bg-black text-center">
             	<h2>优势</h2>
-            	<p>1.和多家公司合作。</br>2.位于雕塑之乡曲阳。<br>3.我们有优良的团队。</br>4.石源充足。</br></br></br></br></p>
+            	<p>1.和多家公司合作。</br>2.位于雕塑之乡曲阳。<br>3.我们有优良的团队。</br>4.石源充足。</br></br></br></p>
             </div>
         </div>
         
